...
            getFavoriteAlbum();
          },
          items: const [
            BottomNavigationBarItem(icon: Icon(Icons.home), label: "홈"),
            BottomNavigationBarItem(
              icon: Icon(Icons.search_rounded),
              label: "탐색",
            ),
            BottomNavigationBarItem(
              icon: CircleAvatar(
                backgroundColor: Color(0xFFDE9E4C),
                child: Icon(Icons.add, color: Colors.black),
              ),
...
